installation/environment/gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: The Gitea server's http port
    service.alpha.openshift.io/dependencies: '[{"name":"gitea-postgresql","namespace":"","kind":"Service"}]'
    argocd.argoproj.io/sync-wave: "21"
  labels:
    app: gitea
  name: gitea
  namespace: gitea
spec:
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: gitea
    name: gitea
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
